--- a/ManipulacionDOM/index.html
+++ b/ManipulacionDOM/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <script src="app.js"></script>
+    <h1>Curso de DOM</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi necessitatibus temporibus optio, reiciendis voluptas! Quo quas debitis facilis, tempora, soluta recusandae amet at aliquid culpa dolorem, id magni aut!
+        
+    </p>
 </body>
 </html>
