--- a/ManipulacionDOM/index.html
+++ b/ManipulacionDOM/index.html
@@ -5,12 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <script src="app.js"></script>
     <h1>Curso de DOM</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi necessitatibus temporibus optio, reiciendis voluptas! Quo quas debitis facilis, tempora, soluta recusandae amet at aliquid culpa dolorem, id magni aut!
-        
+    <h2 class = "subtitulo">Juancito</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur 
+        adipisicing elit. Provident commodi 
+        necessitatibus temporibus optio, reiciendis 
+        voluptas! Quo quas debitis facilis, tempora, 
+        soluta recusandae amet at aliquid culpa dolor
+        em, id magni aut!
     </p>
+
+    <a href="https://github.com/Juan199963/ManipulacionDelDOM/pulse""></a>
+
+    <a href="https://github.com/Juan199963/ManipulacionDelDOM/pulse""></a>
 </body>
 </html>
